# cicada-mpc

./: .coveragerc  .gitignore  .travis.yml  README.md  pyproject.toml  regression.py  setup.py
.github/workflows/: auto-delete-runs.yml  delete-runs.yml  manual-delete-runs.yml  manual-testing.yml  manually-delete-runs.yml  python-package.yml  regression-tests.yml  targeted-regression-tests.yml  test.yml
artwork/: communication-patterns.ai
cicada/: __init__.py  active.py  additive.py  arithmetic.py  bind.py  calculator.py  cli.py  encoding.py  interactive.py  logger.py  logging.py  perf.py  przs.py  shamir.py  transcript.py
cicada/cli/: __init__.py  main.py  perf.py
cicada/communicator/: __init__.py  interface.py  nng.py  socket.py
cicada/encoder/: __init__.py  binaryfield.py  fixedfield.py
cicada/encoding/: __init__.py  (+1 more)
docs/: anaconda-installation.rst  cicada.active.rst  cicada.additive.rst  cicada.arithmetic.rst  cicada.bind.rst  cicada.calculator.rst  cicada.cli.main.rst  cicada.cli.perf.rst  cicada.cli.rst  cicada.communicator.interface.rst  cicada.communicator.nng.rst  cicada.communicator.rst  cicada.communicator.socket.connect.rst  cicada.communicator.socket.rst  cicada.encoder.binaryfield.rst  cicada.encoder.fixedfield.rst  cicada.encoder.rst  cicada.encoding.fixedpoint.rst  cicada.encoding.rst  cicada.interactive.rst  cicada.logger.rst  cicada.logging.rst  cicada.perf.rst  cicada.przs.rst  cicada.rst  cicada.shamir.rst  cicada.transcript.rst  commands.rst  compatibility.rst  conf.py  contributing.rst  dependencies.rst  development.rst  glossary.rst  index.rst  installation.rst  millionaire-3.txt  player1.txt  player2.txt  player3.txt  (+6 more)
examples/: abs.py  absolute.py  active_adversary.py  activereshare.py  addition.py  addreshare.py  asyncclient.py  asyncserver.py  bits.py  bloom.py  broadcast.py  calculator.py  cicada_shamir.py  comp-ltz-test.py  compare.py  dbug.py  dectry.py  div.py  division.py  dot-product-timing.py  dot.py  dp_active.py  exp.py  fail-and-revoke.py  failure-notification.py  fault-recovery.py  fdp.py  floor.py  inner-product.py  interactive-input.py  interactive-millionaires.py  interactive-sum.py  less_than_zero.py  local-add.py  logical_not.py  lsb_extract.py  mal.py  metronome.py  millionaire-1.txt  millionaires.py  (+46 more)
features/: active.feature  additive.feature  administrivia.feature  arithmetic.feature  calculator.feature  communication.feature  documentation.feature  encoder.feature  encoding.feature  environment.py  field.feature  interactive.feature  logger.feature  logging.feature  service.feature  shamir.feature  socket.feature  transcript.feature
notebooks/: advanced-logging.ipynb  api-changes.ipynb  array-subclassing.ipynb  casting.ipynb  communication-matrix.ipynb  div_debug.ipynb  encoding-refactoring.ipynb  encoding.ipynb  encodings.ipynb  field-arrays.ipynb  function-approximation.ipynb  hunter.ipynb  math.ipynb  mixins.ipynb  pade_approx.ipynb  protocol-objects.ipynb  shamir-threshold.ipynb  share.ipynb  startup-timeouts.ipynb  statistics.ipynb  sum-subset.ipynb  taylor_approx.ipynb  transcripts.ipynb
(+97 files in other folders)
