[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "cicada"

[project]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Communications",
    "Topic :: Scientific/Engineering",
    "Topic :: Security :: Cryptography",
    "Topic :: Utilities",
]
dependencies = [
    "netifaces",
    "numpy",
    "pynetstring",
]
description = "Flexible toolkit for fault tolerant secure multiparty computation."
dynamic = ["version"]
maintainers = [{name="Timothy M. Shead", email="tshead@sandia.gov"}]
name = "cicada-mpc"
requires-python = ">=3.8"

[project.optional-dependencies]
all = [
    "behave",
    "coverage",
    "ipython",
    "nbsphinx",
    "sphinx >= 3.5",
    "sphinx-argparse",
    "sphinx-gallery < 0.11",
    "sphinx_rtd_theme",
]
doc = [
    "ipython",
    "nbsphinx",
    "sphinx >= 3.5",
    "sphinx-argparse",
    "sphinx-gallery < 0.11",
    "sphinx_rtd_theme",
]

[project.scripts]
cicada = "cicada.cli.main:main"
cicada-perf = "cicada.cli.perf:main"

[project.urls]
"Chat" = "https://github.com/cicada-mpc/cicada-mpc/discussions"
"Coverage" = "https://coveralls.io/r/cicada-mpc/cicada-mpc"
"Documentation" = "https://cicada-mpc.readthedocs.io"
"Issue Tracker" = "https://github.com/cicada-mpc/cicada-mpc/issues"
"Source" = "https://github.com/cicada-mpc/cicada-mpc"

